--- a/hmqc.yaml
+++ b/hmqc.yaml
@@ -9,6 +9,10 @@ spec:
   memory: '2G'
   logLevel: INFO
   controllerTemplate: cluster-stateful-set.yaml
+  operatorHints:
+    statefulSet: 
+      surgeNode: true
+      surgeNodeCleanupPvc: true
   configMaps:
   - name: hivemq-license
     path: /opt/hivemq/license
@@ -29,7 +33,7 @@ spec:
     patch:
     - '[{"op":"add","path":"/spec/sessionAffinity","value":"ClientIP"}]'
   mqtt:
-    maxQos: 1
+    maxQos: 2
   configOverride: |
     <?xml version="1.0"?>
     <hivemq xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
