--- a/hmqc.yaml
+++ b/hmqc.yaml
@@ -39,6 +39,7 @@ spec:
     - '[{"op":"add","path":"/spec/sessionAffinity","value":"ClientIP"}]'
   mqtt:
     maxQos: 2
+    queuedMessagesMaxQueueSize: 2000
   configOverride: |
     <?xml version="1.0"?>
     <hivemq xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
