--- a/hmqc.yaml
+++ b/hmqc.yaml
@@ -64,8 +64,10 @@ spec:
     path: /opt/hivemq/license
   - name: keystore-jks
     path: /opt/hivemq/conf
+    subPath: keystore.jks
   - name: truststore-jks
     path: /opt/hivemq/conf
+    subPath: truststore.jks
   ports:
   - name: "mqtt"
     port: 1883
