removed config override

--- a/hmqc.yaml
+++ b/hmqc.yaml
@@ -58,8 +58,7 @@ spec:
   #  path: /opt/hivemq/license
   configMaps:
   - name: logback
-    path: /opt/hivemq/conf
-    subPath: logback.xml
+    path: /opt/hivemq/conf/logback.xml
   secrets:
   - name: hivemq-license
     path: /opt/hivemq/license
