--- a/hmqc.yaml
+++ b/hmqc.yaml
@@ -5,8 +5,7 @@ metadata:
 spec:
   initContainers:
   - name: init-shared
-    patch:
-    - '[{"op":"add","path":"/imagePullPolicy","value":"IfNotPresent"}]'
+    imagePullPolicy: IfNotPresent
   hivemqVersion: k8s-4.9.1
   nodeCount: 2
   cpu: '2'
