--- a/hmqc.yaml
+++ b/hmqc.yaml
@@ -3,9 +3,12 @@ kind: HiveMQCluster
 metadata:
   name: hivemq-c
 spec:
-  initContainers:
-  - name: init-shared
-    imagePullPolicy: IfNotPresent
+  #initContainers:
+  #- name: init-shared
+  #  patch:
+  #  - '[{"op":"add","path":"/imagePullPolicy","value":"IfNotPresent"}]'
+  patch:
+  - "{\"spec\": {\"template\": {\"spec\": {\"initContainers\": [{\"name\": \"init-shared\",\"imagePullPolicy\": \"IfNotPresent\"}]}}}}"
   hivemqVersion: k8s-4.9.1
   nodeCount: 2
   cpu: '2'
