--- a/hmqc.yaml
+++ b/hmqc.yaml
@@ -51,7 +51,9 @@ spec:
     name: hivemq-enterprise-security-extension
     # Note that this is just an example initialization routine. Make sure this points to the current JDBC version you require for your configuration.
     initialization: |
-      # A little hack because k8s configMaps can't handle sub-directories
+      [[ -e /conf-override/extensions/hivemq-enterprise-security-extension/permissions_client_cert.xml ]] &&
+      rm -f $(pwd)/conf/permissions_client_cert.xml &&
+      cp -s /conf-override/extensions/hivemq-enterprise-security-extension/permissions_client_cert.xml $(pwd)/conf/permissions_client_cert.xml &&
       [[ -e /conf-override/extensions/hivemq-enterprise-security-extension/enterprise-security-extension.xml ]] &&
       rm -f $(pwd)/conf/enterprise-security-extension.xml &&
       cp -s /conf-override/extensions/hivemq-enterprise-security-extension/enterprise-security-extension.xml $(pwd)/conf/enterprise-security-extension.xml
