--- a/hmqc.yaml
+++ b/hmqc.yaml
@@ -3,8 +3,8 @@ kind: HiveMQCluster
 metadata:
   name: hivemq-c
 spec:  
-  imagePullSecrets:
-  - name: hivemq-pull-secret
+  imagePullSecrets: 
+  - hivemq-pull-secret
   hivemqVersion: k8s-4.9.1
   nodeCount: 2
   cpu: '2'
