--- a/hmqc.yaml
+++ b/hmqc.yaml
@@ -10,6 +10,7 @@ spec:
   cpu: '2'
   memory: '2G'
   logLevel: INFO
+  controllerTemplate: cluster-deployment.yaml
   #controllerTemplate: cluster-stateful-set.yaml
   #operatorHints:
   #  statefulSet: 
