--- a/hmqc.yaml
+++ b/hmqc.yaml
@@ -10,12 +10,12 @@ spec:
   cpu: '2'
   memory: '2G'
   logLevel: INFO
-  controllerTemplate: cluster-deployment.yaml
-  #controllerTemplate: cluster-stateful-set.yaml
-  #operatorHints:
-  #  statefulSet: 
-  #    surgeNode: true
-  #    surgeNodeCleanupPvc: true
+  #controllerTemplate: cluster-deployment.yaml
+  controllerTemplate: cluster-stateful-set.yaml
+  operatorHints:
+    statefulSet: 
+      surgeNode: true
+      surgeNodeCleanupPvc: true
   env:
   - name: AUTH_EXT_BASIC_AUTH_ID
     valueFrom:
