--- a/hmqc.yaml
+++ b/hmqc.yaml
@@ -3,9 +3,9 @@ kind: HiveMQCluster
 metadata:
   name: hivemq-c
 spec:  
-  imagePullSecrets: 
-  - hivemq-pull-secret
-  hivemqVersion: k8s-4.9.0
+  #imagePullSecrets: 
+  #- hivemq-pull-secret
+  hivemqVersion: hivemq/hivemq4:k8s-4.9.1
   nodeCount: 2
   cpu: '2'
   memory: '2G'
